# REST_Service_Salary

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
static/: style.css
templates/: expired.html  login.html  salary.html  token.html  wrong.html
tests/: tests.py
