[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Chousspb <chous_spb@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
flask = "^2.3.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
